--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
+
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  padding: 20px;
+  font-family: Arial, sans-serif;
+  color: #333;
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.App-main {
+  padding: 20px;
   display: flex;
   flex-direction: column;
+  gap: 20px;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.loading {
+  text-align: center;
+  font-size: 1.5rem;
+  margin-top: 50px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.search-top-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap; 
+  gap: 5px;
+  padding: 20px; 
+}
+
+
+@media (min-width: 768px) {
+  .App-main {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
   }
 }
